--- a/training_source/author-filtering.ipynb
+++ b/training_source/author-filtering.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "25390d7a-9c7c-4660-87d5-376f49bdacb2",
    "metadata": {
     "scrolled": true
@@ -164,6 +164,21 @@
       "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/test_queries.jsonl 65103 --> 5000\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl')]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "558885it [50:28, 184.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates.jsonl 558926 --> 25000\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl 558918 --> 25000\n"
+     ]
     }
    ],
    "source": [
@@ -176,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "be52b80a-0807-476f-8be9-aaa41cfc770c",
    "metadata": {
     "scrolled": true
@@ -193,7 +208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3379it [00:35, 96.09it/s] \n"
+      "3379it [00:27, 122.26it/s]\n"
      ]
     },
     {
@@ -209,7 +224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6560it [00:53, 123.03it/s]\n"
+      "6560it [00:53, 122.61it/s]\n"
      ]
     },
     {
@@ -225,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "56319it [07:40, 122.40it/s]\n"
+      "56319it [07:50, 119.70it/s]\n"
      ]
     },
     {
@@ -242,12 +257,12 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=10000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "17b242cd-fcac-4445-b18d-0dd42b0a994c",
    "metadata": {
     "scrolled": true
@@ -264,15 +279,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10861it [01:45, 103.29it/s]\n"
+      "10861it [01:44, 103.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10861 --> 2847\n",
-      "10861 --> 2847\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_candidates.jsonl 10861 --> 2847\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_queries.jsonl 10861 --> 2847\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/test_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/test_queries.jsonl')]\n"
      ]
     },
@@ -280,31 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21085it [03:25, 102.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21085 --> 5476\n",
-      "21085 --> 5476\n",
-      "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries.jsonl')]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "181024it [29:26, 102.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "181024 --> 46617\n",
-      "181024 --> 46617\n"
+      "13462it [02:11, 108.35it/s]"
      ]
     }
    ],
@@ -313,22 +304,40 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=10000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ab21e8d6-49a9-4694-b514-6333de2eabca",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/dev_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/dev_queries.jsonl')]\n"
+     ]
+    }
+   ],
    "source": [
     "#ds_path = '/mnt/swordfish-pool2/milad/hiatus-data/performers-data/tmp-data/'\n",
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/'\n",
-    "df_info = extract_split_similarity_info(ds_path, 'dev')\n",
-    "df_info = extract_split_similarity_info(ds_path, 'test')\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train')"
+    "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
+    "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7717980-8498-484b-8e81-0cb964711ca2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
