--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -33,14 +33,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-30 10:00:45.992200: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-30 10:00:45.996012: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-09-30 10:00:46.033042: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-09-30 10:00:46.033064: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-09-30 10:00:46.033088: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-09-30 10:00:46.041808: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-10-01 06:56:01.377913: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-10-01 06:56:03.293250: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-01 06:56:06.760671: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-01 06:56:06.761250: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-01 06:56:06.779258: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-01 06:56:08.575727: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-30 10:00:47.462450: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2024-10-01 06:56:50.181291: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
       "  warn(\n"
      ]
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "22c5d595-9d25-46c7-8dc9-afe487739232",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "2641421a-26f5-497f-89d4-0b52424eab95",
    "metadata": {},
    "outputs": [],
@@ -233,8 +233,7 @@
       "Dataset Statistics: train 57211\n",
       "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_queries_filtered.jsonl\n",
       "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_queries_filtered.jsonl\n",
-      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_queries_filtered.jsonl\n",
-      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_candidates_filtered.jsonl\n"
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_queries_filtered.jsonl\n"
      ]
     },
     {
@@ -248,6 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_candidates_filtered.jsonl\n",
       "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_candidates_filtered.jsonl\n",
       "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_candidates_filtered.jsonl\n",
       "Dataset Statistics: dev 8284\n"
@@ -270,8 +270,7 @@
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' is running. ⏳\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' will run lazily. 🥱\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' is running. ⏳\n",
-      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' will run lazily. 🥱\n",
-      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Loading model...\n"
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' will run lazily. 🥱\n"
      ]
     },
     {
@@ -288,35 +287,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Loading model...\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Finished loading.\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [ 🤗 Accelerate] Detected kernel version 4.18.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Dev Data' finished running lazily. 🎉\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' finished running lazily. 🎉\n",
       "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' finished running lazily. 🎉\n",
-      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 0.0 -- {'loss': 2.5997705459594727, 'model_preparation_time': 0.0157, 'runtime': 192.4586, 'samples_per_second': 43.043, 'steps_per_second': 0.431}\n",
-      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 0.34904013961605584 -- {'loss': 1.9007, 'grad_norm': 1.324845552444458, 'learning_rate': 0.0004930191972076789}\n",
-      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 0.34904013961605584 -- {'loss': 1.6002119779586792, 'model_preparation_time': 0.0157, 'runtime': 199.4943, 'samples_per_second': 41.525, 'steps_per_second': 0.416}\n"
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 0.0 -- {'loss': 2.5997705459594727, 'model_preparation_time': 0.0042, 'runtime': 194.8354, 'samples_per_second': 42.518, 'steps_per_second': 0.426}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 0.34904013961605584 -- {'loss': 1.9042, 'grad_norm': 1.3357161283493042, 'learning_rate': 0.00044182664339732406}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 0.34904013961605584 -- {'loss': 1.604455828666687, 'model_preparation_time': 0.0042, 'runtime': 186.157, 'samples_per_second': 44.5, 'steps_per_second': 0.446}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 0.6980802792321117 -- {'loss': 1.6268, 'grad_norm': 1.2739105224609375, 'learning_rate': 0.00038365328679464806}\n"
      ]
     }
    ],
    "source": [
-    "train_datadreamer_ta2__on_performers_data(fold, output_path + '/original_ta2_performers_data_model', 'MultipleNegativesSymmetricRankingLoss', luar_model_path=luar_model_path, batch_size=100, epochs=25)"
+    "train_datadreamer_ta2__on_performers_data(fold, output_path + '/original_ta2_performers_data_model', 'MultipleNegativesSymmetricRankingLoss', luar_model_path=luar_model_path, batch_size=100, epochs=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e15d0aa7-450f-40ab-bfc7-a6e73267e38b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('done')"
    ]
