--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -139,6 +139,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fc4dee6-f8c6-4d4a-82d8-2ae20c90ed4f",
+   "metadata": {},
+   "source": [
+    "- Train 3 epochs on the performers data\n",
+    "- Resume training on HRS dataset from phase 1 and 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "22c5d595-9d25-46c7-8dc9-afe487739232",
@@ -168,7 +177,7 @@
     "            trust_remote_code=True,\n",
     "            device='cuda:0',\n",
     "            dtype=\"bfloat16\",\n",
-    "            force=True,\n",
+    "            force=False, #so we can resume training if things shutsdown\n",
     "        )\n",
     "        \n",
     "        trainer.train_with_positive_pairs(\n",
@@ -189,6 +198,8 @@
     "            save_steps=600,\n",
     "            eval_steps=200,\n",
     "            save_total_limit=3,\n",
+    "            resume_from_checkpoint=True,\n",
+    "            overwrite_output_dir=False,\n",
     "            accelerator_config={\n",
     "                \"dispatch_batches\": False,\n",
     "            },\n",
